# JIT-AOT-Compilers

./: CMakeLists.txt  README.md  main.cpp
analysis/: CMakeLists.txt  DSU.cpp  DSU.h  DomTree.cpp  DomTree.h  GraphChecker.cpp  GraphChecker.h  LinearOrdering.h  LiveAnalysisStructs.cpp  LiveAnalysisStructs.h  LivenessAnalyzer.cpp  LivenessAnalyzer.h  Loop.h  LoopAnalyzer.cpp  LoopAnalyzer.h  Traversals.cpp  Traversals.h
codegen/: LinearScanRegAlloc.cpp  LinearScanRegAlloc.h  RegAllocChecker.cpp  RegAllocChecker.h
ir/: AnalysisValidityManager.h  BasicBlock.cpp  BasicBlock.h  BasicBlockIterator.h  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerBase.h  Concepts.h  Graph.cpp  Graph.h  GraphCopyHelper.cpp  GraphCopyHelper.h  IRBuilder.h  Input.h  Instruction.cpp  Instruction.h  InstructionBase.cpp  InstructionBase.h  InstructionBuilder.h  InstructionsCopy.cpp  LiveAnalysisStructs.cpp  LiveAnalysisStructs.h  Loop.h  PassBase.h  Types.h  Users.h
ir/instructions/: Instruction.h  InstructionBase.h  Types.h  Users.h
ir/marker/: marker.h
ir/passes/: InstructionsVisitor.h
optimization/: BranchElimination.cpp  BranchElimination.h  CMakeLists.txt  CheckElimination.h  ConstantFolding.cpp  ConstantFolding.h  DCE.cpp  DCE.h  EmptyBlocksRemoval.cpp  EmptyBlocksRemoval.h  Inlining.cpp  Inlining.h  PassBase.h  Peephole.cpp  Peephole.h
tests/: BasicBlockTest.cpp  BranchEliminationTest.cpp  CMakeLists.txt  CompilerTestBase.cpp  CompilerTestBase.h  DCETest.cpp  DomTreeTest.cpp  EmptyBlocksRemovalTest.cpp  GraphTest.cpp  InliningTest.cpp  InstructionsTest.cpp  LivenessAnalysisTest.cpp  LoopAnalysisTest.cpp  PeepholesTest.cpp  TestGraphSamples.cpp  TestGraphSamples.h  TraversalsTest.cpp
utils/: CMakeLists.txt  debug.cpp  debug.h  helpers.h  logger.h  macros.h
utils/arena/: ArenaAllocator.cpp  ArenaAllocator.h
utils/dumper/: DummyDumper.h  EventDumper.cpp  EventDumper.h  FileDumper.h  StdOutputDumper.h
